# verified-sources

./: .gitignore  CONTRIBUTING.md  DEV_GUIDE.md  README.md  pyproject.toml
.github/workflows/: AutomatedTests.yaml  ci.yaml  on_pr_merge.yaml
sources/source_wikipedia/: source.py  streams.py
sources/wikipedia/: streams.py
src/: __init__.py
verified_sources/amazon_s3/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/amazon_s3/tests/: conftest.py  test_amazon_s3.py
verified_sources/aws_redshift/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/aws_redshift/tests/: conftest.py  test_aws_redshift.py
verified_sources/common/doc_splitters/: base_splitter.py  factory.py
verified_sources/google_cloud_storage/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/google_cloud_storage/tests/: conftest.py  test_google_cloud_storage.py
verified_sources/google_drive/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/google_drive/tests/: conftest.py  test_google_drive.py
verified_sources/local_file_system/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/local_file_system/tests/: conftest.py  test_local_file_system.py
verified_sources/postgres/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/postgres/tests/: conftest.py  test_postgres.py
verified_sources/website_crawler/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py
verified_sources/website_crawler/tests/: conftest.py  test_website_crawler.py
verified_sources/website_crawler_sitemap/: catalog.py  catalog.yml  source.py  specs.py  specs.yml  streams.py  test.py
verified_sources/website_crawler_sitemap/tests/: conftest.py  test_website_crawler_sitemap.py
verified_sources/wikipedia/: catalog.yml  source.py  specs.yml  streams.py
