[tool.poetry]
name = "verified-sources"
version = "0.1.0"
description = "List of verified sources"
authors = ["Rahul Kumar <rahul.kumar@decision-tree.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dat-core = {git = "https://github.com/dat-labs/dat-core", rev = "main", develop = true}
dat-cli = {git = "https://github.com/dat-labs/dat-cli", rev = "main"}
beautifulsoup4 = "^4.12.3"
boto3 = "*"
psycopg = "^3.1.19"
langchain-text-splitters = "^0.0.1"
langchain-community = "^0.0.32"
llama-index-readers-s3 = "^0.1.7"
llama-index-readers-web = "^0.1.21"
datamodel-code-generator = "^0.25.9"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.3"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.wikipedia.dependencies]
lxml = "^5.1.0"


[tool.poetry.extras]
wikipedia = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
